name:               wild
version:            0.1.0
synopsis:           Release your Haskell project to GitHub
description:
    wild is a tool to deliver a Haskell project to GitHub's Release API.
license:            AGPL-3
license-file:       LICENSE
author:             Kinoru
maintainer:         xkinoru@gmail.com
copyright:          Copyright (C) 2015 Kinoru
category:           Development
build-type:         Simple
cabal-version:      >=1.18
homepage:           https://github.com/kinoru/wild
bug-reports:        https://github.com/kinoru/wild/issues
tested-with:        GHC==7.10.2
extra-source-files: README.md CHANGELOG.md

executable wild
    default-extensions: OverloadedStrings, RecordWildCards
    hs-source-dirs:     src
    main-is:            Main.hs
    other-modules:
        Format,
        ByteString,
        GitHub,
        Irregex,
        Parser,
        RawFilePath,
        Pack,
        Unsafe
    build-depends:
        aeson == 0.10.*,
        aeson-pretty == 0.7.*,
        bytestring == 0.10.*,
        cmdargs == 0.10.*,
        lens == 4.*,
        text == 1.*,
        unix == 2.*,
        unordered-containers == 0.2.*,
        wreq == 0.4.*,
        base >=4.8 && <4.9
    ghc-options: -Wall -fwarn-incomplete-uni-patterns -O2
    default-language: Haskell2010
