name:               wild
version:            0.1.0
synopsis:           Release your Haskell project to GitHub
description:
    wild is a tool to deliver a Haskell project to GitHub's Release API.
license:            AGPL-3
license-file:       LICENSE
author:             Kinoru
maintainer:         xkinoru@gmail.com
copyright:          Copyright (C) 2015 Kinoru
category:           Development
build-type:         Simple
cabal-version:      >=1.18
homepage:           https://github.com/kinoru/wild
bug-reports:        https://github.com/kinoru/wild/issues
tested-with:        GHC==7.10.3
extra-source-files:
    README.md
    CHANGELOG.md
    src/gnulinux/Platform.hs
    src/osx/Platform.hs

executable wild
    default-extensions: OverloadedStrings, RecordWildCards
    hs-source-dirs:     src
    if os(linux)
        hs-source-dirs: src/gnulinux
    if os(darwin)
        hs-source-dirs: src/osx
    main-is:            Main.hs
    other-modules:
        Platform,
        Format,
        ByteString,
        GitHub,
        Irregex,
        Parser,
        RawFilePath,
        Pack,
        Unsafe
    build-depends:
        aeson >= 0.11.1.4 && < 0.12,
        aeson-pretty >= 0.7 && < 0.8,
        bytestring >= 0.10 && < 0.11,
        cmdargs >= 0.10 && < 0.11,
        lens >= 4 && < 5,
        text >= 1 && < 2,
        unix >= 2 && < 3,
        unordered-containers >= 0.2 && < 0.3,
        wreq >= 0.4 && < 0.5,
        base >=4.8 && <4.9
    ghc-options: -Wall -fwarn-incomplete-uni-patterns -O2
    default-language: Haskell2010
